Configuracion de script para la nube

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,7 +22,7 @@
     "username": "Username"
   },
   "menu": {
-    "app": "Pointerp",
+    "app": "ANCRIS",
     "inicio": "Home",
     "ventas": {
       "titulo": "Sales",
