Filtro de medicos por especialidad

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -171,6 +171,7 @@
       "imprimir": "Imprimir",
       "facturar": "Facturar",
       "unificar": "Unificar",
+      "agregar": "Agregar",
       "guardar": "Guardar",
       "cancelar": "Cancelar",
       "continuar": "Continuar",
